--- a/foundry.toml
+++ b/foundry.toml
@@ -7,5 +7,6 @@ remappings = ["@chainlink/=lib/chainlink-brownie-contracts/"]
 # This tells Foundry: “I explicitly allow scripts to read files from the broadcast    folder.”
 fs_permissions = [{ access = "read", path = "./broadcast" }]
 
+# ffi=true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
